<resources>
    <string name="app_name">Video Player</string>
    <string name="allow_storage_access_title">Allow Video Player to access video and audio files</string>
    <string name="allow_storage_access_description">Video Player needs you to grant this permission to access the media files on this device.</string>
    <string name="allow_settings_access_ringtone_title">Allow Video Player to set the ringtone</string>
    <string name="allow_settings_access_ringtone_description">Video Player needs you to grant this permission to set up this song as your ringtone.</string>
    <string name="allow_settings_access_brightness_title">Allow Video Player to change brightness mode</string>
    <string name="allow_settings_access_brightness_description">Video Player needs you to grant this permission to change your brightness mode.</string>
    <string name="allow_draw_overlays_title">Allow Video Player popup over other apps</string>
    <string name="allow_sdraw_overlays_description">Video Player needs you to grant this permission display your video in a popup over other applications.</string>
    <string name="permission_ask_again">Grant permission</string>
    <string name="exit_app">Close Video Player</string>

    <string name="home_item_movies">All Videos</string>
    <string name="home_item_movies_sub">8 Videos</string>
    <string name="home_item_works">All Works</string>
    <string name="home_item_works_sub">9 Works</string>
    <string name="home_item_private">Private Box</string>
    <string name="home_item_private_sub"></string>

    <!--<string name="fragment_page_home">HOME</string>-->
    <!--<string name="fragment_page_videos">VIDEOS</string>-->
    <!--<string name="fragment_page_folders">FOLDERS</string>-->

    <string name="welcome_hint">Video Player HD</string>
    <string name="about_app_name">Video Player HD</string>
    <string name="about_version">Version: v%1$s</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us on Play Store</string>

    <string name="sortby_name">Name</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_date">Date</string>

    <string name="brightness">50%</string>
    <string name="display_ratio_best_fit">Best Fit</string>
    <string name="display_ratio_fit_horizontal">Fit Horizontal</string>
    <string name="display_ratio_fit_vertical">Fit Vertical</string>
    <string name="display_ratio_fill">Fill</string>
    <string name="display_ratio_16_9">16:9</string>
    <string name="display_ratio_4_3">4:3</string>
</resources>
